split off figure and table creation code

--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -21,6 +21,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Set Classifier Name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier_name = 'Logistic Regression'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List of Rating Models and Most Complex Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_names = ['rating_model_1', 'rating_model_2', 'rating_model_3']\n",
+    "clean_model_names = [\"Altman's Z\", 'Financial Variables and Sector', 'Financial Variables, Sector, and NLP Features']\n",
+    "# set most_complex_model \n",
+    "most_complex_model = 'rating_model_3'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Variable Index"
    ]
   },
@@ -258,25 +293,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List of Rating Models and Most Complex Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_names = ['rating_model_1', 'rating_model_2', 'rating_model_3']\n",
-    "clean_model_names = [\"Altman's Z\", 'Financial Variables and Sector', 'Financial Variables, Sector, and NLP Features']\n",
-    "# set most_complex_model \n",
-    "most_complex_model = 'rating_model_3'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Model Comparison"
    ]
   },
@@ -292,7 +308,7 @@
     "    '''\n",
     "\n",
     "    # Load close_exact_dict\n",
-    "    close_exact_dict = pd.read_pickle('../../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_close_exact_dict.pkl')\n",
+    "    close_exact_dict = pd.read_pickle('../../../../Output/Modelling/' + classifier_name + '/' + model_name + '/' + model_name + '_close_exact_dict.pkl')\n",
     "    # Version with each item rounded to 4 decimal places\n",
     "    close_exact_dict_rounded = {k: round(v, 4) for k, v in close_exact_dict.items()}\n",
     "    # Unpack\n",
@@ -300,7 +316,7 @@
     "    close_predictions_share = close_exact_dict_rounded['close_predictions_share']\n",
     "\n",
     "    # Load acc_f1_majority\n",
-    "    acc_f1_majority = pd.read_pickle('../../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_acc_f1_majority.pkl')\n",
+    "    acc_f1_majority = pd.read_pickle('../../../../Output/Modelling/' + classifier_name + '/' + model_name + '/' + model_name + '_acc_f1_majority.pkl')\n",
     "    # Version with each item rounded to 2 decimal places\n",
     "    acc_f1_majority_rounded = {k: round(v, 4) for k, v in acc_f1_majority.items()}\n",
     "    # Unpack\n",
@@ -312,7 +328,7 @@
     "    print('exact predictions share == accuracy:', exact_predictions_share == accuracy)\n",
     "\n",
     "    # Get weighted average precision and recall from classification report\n",
-    "    classification_report = pd.read_pickle('../../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_classification_report.pkl')\n",
+    "    classification_report = pd.read_pickle('../../../../Output/Modelling/' + classifier_name + '/' + model_name + '/' + model_name + '_classification_report.pkl')\n",
     "    # Convert classification report string to dataframe\n",
     "    classification_report_lines = classification_report.split('\\n')\n",
     "    # split on spaces within and drop blanks\n",
@@ -426,7 +442,7 @@
     "    })])\n",
     "\n",
     "    # Export to Excel\n",
-    "    model_comparison_df.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/' + include_exclude_previous + 'model_comparison_df.xlsx', index = False)\n",
+    "    model_comparison_df.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df.xlsx', index = False)\n",
     "\n",
     "    # Export to LaTeX\n",
     "    # Format columns\n",
@@ -437,7 +453,7 @@
     "    # Center all columns\n",
     "    lt_string = model_comparison_df.to_latex(index=False, column_format='c' * len(model_comparison_df.columns), escape=False)\n",
     "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
-    "    with open('../../../../Output/Modelling/Logistic Regression/Tables/' + include_exclude_previous + 'model_comparison_df.tex', 'w') as f:\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df.tex', 'w') as f:\n",
     "        f.write(latex_with_font_size)\n",
     "\n",
     "    print(model_comparison_df)"
@@ -523,7 +539,7 @@
     "for include_exclude_previous in ['exclude_previous_', 'include_previous_']:\n",
     "\n",
     "    # Load classificiation report from pickle\n",
-    "    classification_report = pd.read_pickle('../../../../Output/Modelling/Logistic Regression/' + include_exclude_previous + most_complex_model + '/' + include_exclude_previous + most_complex_model + '_classification_report.pkl')\n",
+    "    classification_report = pd.read_pickle('../../../../Output/Modelling/' + classifier_name + '/' + include_exclude_previous + most_complex_model + '/' + include_exclude_previous + most_complex_model + '_classification_report.pkl')\n",
     "    print(classification_report)\n",
     "\n",
     "    # Convert classification report string to dataframe\n",
@@ -539,7 +555,7 @@
     "    print(classification_report_data)\n",
     "\n",
     "    # Export to Excel\n",
-    "    classification_report_data.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/' + include_exclude_previous + 'Most_Complex_Model_Classification_Report.xlsx', index=False)\n",
+    "    classification_report_data.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Model_Classification_Report.xlsx', index=False)\n",
     "\n",
     "    # Export to Latex\n",
     "    #classification_report_data.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex', index=False)\n",
@@ -551,7 +567,7 @@
     "    # Center all columns\n",
     "    lt_string = classification_report_data.to_latex(index=False, column_format='c' * 5, escape=False)\n",
     "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
-    "    with open('../../../../Output/Modelling/Logistic Regression/Tables/' + include_exclude_previous + 'Most_Complex_Model_Classification_Report.tex', 'w') as f:\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Model_Classification_Report.tex', 'w') as f:\n",
     "        f.write(latex_with_font_size)"
    ]
   },
@@ -591,7 +607,7 @@
     "for include_exclude_previous in ['exclude_previous_', 'include_previous_']:\n",
     "\n",
     "    # Load pickle\n",
-    "    best_params = pd.read_pickle('../../../../Output/Modelling/Logistic Regression/' + include_exclude_previous + most_complex_model + '/' + include_exclude_previous + most_complex_model + '_best_params.pkl')\n",
+    "    best_params = pd.read_pickle('../../../../Output/Modelling/' + classifier_name + '/' + include_exclude_previous + most_complex_model + '/' + include_exclude_previous + most_complex_model + '_best_params.pkl')\n",
     "    print(best_params)\n",
     "\n",
     "    # Convert to dataframe\n",
@@ -618,7 +634,7 @@
     "print(best_params)\n",
     "\n",
     "# Export to Excel\n",
-    "best_params.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Models_Best_Params.xlsx', index=False)\n",
+    "best_params.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/Most_Complex_Models_Best_Params.xlsx', index=False)\n",
     "\n",
     "# Export to Latex\n",
     "#best_params.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', index=False)\n",
@@ -629,7 +645,7 @@
     "# Center all columns\n",
     "lt_string = best_params.to_latex(index=False, column_format='c' * len(best_params.columns), escape=False)\n",
     "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
-    "with open('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Models_Best_Params.tex', 'w') as f:\n",
+    "with open('../../../../Output/Modelling/' + classifier_name + '/Tables/Most_Complex_Models_Best_Params.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)"
    ]
   },
@@ -666,7 +682,7 @@
     "for include_exclude_previous in ['exclude_previous_', 'include_previous_']:\n",
     "\n",
     "    # Load data\n",
-    "    permutation_importance = pd.read_parquet('../../../../Output/Modelling/Logistic Regression/' + include_exclude_previous + most_complex_model + '/' + include_exclude_previous + most_complex_model + '_permutation_importance.parquet')\n",
+    "    permutation_importance = pd.read_parquet('../../../../Output/Modelling/' + classifier_name + '/' + include_exclude_previous + most_complex_model + '/' + include_exclude_previous + most_complex_model + '_permutation_importance.parquet')\n",
     "    permutation_importance = permutation_importance.sort_values('mean',ascending=False)\n",
     "    # Set columns to \"Feature\", \"Mean\", \"Standard Deviation\"\n",
     "    permutation_importance.columns = ['Feature', 'Mean', 'Standard Deviation']\n",
@@ -700,7 +716,7 @@
     "    pi_top_15 = permutation_importance.head(15)\n",
     "\n",
     "    # Export to Excel\n",
-    "    pi_top_15.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/' + include_exclude_previous + 'Most_Complex_Model_Permutation_Importance_Top_15.xlsx', index=False)\n",
+    "    pi_top_15.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Model_Permutation_Importance_Top_15.xlsx', index=False)\n",
     "\n",
     "    # Export to Latex\n",
     "    #pi_top_15.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Permutation_Importance_Top_15.tex', index=False)\n",
@@ -709,7 +725,7 @@
     "    # Center all columns\n",
     "    lt_string = pi_top_15.to_latex(index=False, column_format='c' * len(pi_top_15.columns), escape=False)\n",
     "    latex_with_font_size = \"\\\\tiny\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
-    "    with open('../../../../Output/Modelling/Logistic Regression/Tables/' + include_exclude_previous + 'Most_Complex_Model_Permutation_Importance_Top_15.tex', 'w') as f:\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Model_Permutation_Importance_Top_15.tex', 'w') as f:\n",
     "        f.write(latex_with_font_size)\n",
     "\n",
     "    print(pi_top_15)"
@@ -806,7 +822,7 @@
     "changes_table['Majority Baseline'] = maj_baseline\n",
     "\n",
     "# Output to Excel\n",
-    "changes_table.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.xlsx', index=False)\n",
+    "changes_table.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/changes_table.xlsx', index=False)\n",
     "\n",
     "# Output to Latex\n",
     "#changes_table.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', index=False)\n",
@@ -817,7 +833,7 @@
     "# Center all columns\n",
     "lt_string = changes_table.to_latex(index=False, column_format='c' * len(changes_table.columns), escape=False)\n",
     "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
-    "with open('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', 'w') as f:\n",
+    "with open('../../../../Output/Modelling/' + classifier_name + '/Tables/changes_table.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
     "\n",
     "changes_table\n"
