--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_2.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_2.ipynb
@@ -7744,8 +7744,8 @@
     }
    ],
    "source": [
-    "# Evaluate model\n",
-    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, model_name, target_column, df)"
+    "# Get predictions\n",
+    "get_model_predictions(best_model, X_test_scaled, y_test, custom_mapping, model_name, target_column, df)"
    ]
   }
  ],
