--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_1.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-26T20:07:07.507947Z",
-     "iopub.status.busy": "2024-04-26T20:07:07.507649Z",
-     "iopub.status.idle": "2024-04-26T20:07:09.081900Z",
-     "shell.execute_reply": "2024-04-26T20:07:09.081141Z"
+     "iopub.execute_input": "2024-04-29T04:50:11.111786Z",
+     "iopub.status.busy": "2024-04-29T04:50:11.111645Z",
+     "iopub.status.idle": "2024-04-29T04:50:13.005816Z",
+     "shell.execute_reply": "2024-04-29T04:50:13.005347Z"
     }
    },
    "outputs": [],
@@ -36,10 +36,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-26T20:07:09.084469Z",
-     "iopub.status.busy": "2024-04-26T20:07:09.084174Z",
-     "iopub.status.idle": "2024-04-26T20:07:10.609662Z",
-     "shell.execute_reply": "2024-04-26T20:07:10.608815Z"
+     "iopub.execute_input": "2024-04-29T04:50:13.008732Z",
+     "iopub.status.busy": "2024-04-29T04:50:13.008002Z",
+     "iopub.status.idle": "2024-04-29T04:50:14.313084Z",
+     "shell.execute_reply": "2024-04-29T04:50:14.312670Z"
     }
    },
    "outputs": [],
@@ -53,10 +53,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-26T20:07:10.613708Z",
-     "iopub.status.busy": "2024-04-26T20:07:10.613168Z",
-     "iopub.status.idle": "2024-04-26T20:07:10.896179Z",
-     "shell.execute_reply": "2024-04-26T20:07:10.895416Z"
+     "iopub.execute_input": "2024-04-29T04:50:14.316136Z",
+     "iopub.status.busy": "2024-04-29T04:50:14.315415Z",
+     "iopub.status.idle": "2024-04-29T04:50:14.614770Z",
+     "shell.execute_reply": "2024-04-29T04:50:14.614361Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-26T20:07:10.898515Z",
-     "iopub.status.busy": "2024-04-26T20:07:10.898368Z",
-     "iopub.status.idle": "2024-04-26T20:07:10.913487Z",
-     "shell.execute_reply": "2024-04-26T20:07:10.912923Z"
+     "iopub.execute_input": "2024-04-29T04:50:14.617581Z",
+     "iopub.status.busy": "2024-04-29T04:50:14.616919Z",
+     "iopub.status.idle": "2024-04-29T04:50:14.650242Z",
+     "shell.execute_reply": "2024-04-29T04:50:14.649795Z"
     }
    },
    "outputs": [
@@ -96,10 +96,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-26T20:07:10.948371Z",
-     "iopub.status.busy": "2024-04-26T20:07:10.948152Z",
-     "iopub.status.idle": "2024-04-26T20:07:30.822982Z",
-     "shell.execute_reply": "2024-04-26T20:07:30.822327Z"
+     "iopub.execute_input": "2024-04-29T04:50:14.667767Z",
+     "iopub.status.busy": "2024-04-29T04:50:14.667586Z",
+     "iopub.status.idle": "2024-04-29T04:53:51.098034Z",
+     "shell.execute_reply": "2024-04-29T04:53:51.097615Z"
     }
    },
    "outputs": [
@@ -109,16 +109,16 @@
      "text": [
       "Tuned hyperparameters: {'C': 0.1, 'class_weight': None, 'l1_ratio': 0.25, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
       "Best mean CV accuracy: 0.3638938876822836\n",
-      "Coefficients: [[ 0.91689407]\n",
-      " [ 1.06144558]\n",
-      " [ 0.6461242 ]\n",
-      " [ 0.55742198]\n",
+      "Coefficients: [[ 0.91689704]\n",
+      " [ 1.06152279]\n",
+      " [ 0.64610681]\n",
+      " [ 0.55745924]\n",
       " [ 0.        ]\n",
-      " [-1.00165087]\n",
-      " [-1.15701399]\n",
+      " [-1.00163444]\n",
+      " [-1.15701576]\n",
       " [ 0.        ]\n",
-      " [-0.5160959 ]\n",
-      " [-0.07797555]]\n"
+      " [-0.5160232 ]\n",
+      " [-0.07787494]]\n"
      ]
     }
    ],
@@ -132,10 +132,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-26T20:07:30.825216Z",
-     "iopub.status.busy": "2024-04-26T20:07:30.825051Z",
-     "iopub.status.idle": "2024-04-26T20:07:31.686639Z",
-     "shell.execute_reply": "2024-04-26T20:07:31.686094Z"
+     "iopub.execute_input": "2024-04-29T04:53:51.100636Z",
+     "iopub.status.busy": "2024-04-29T04:53:51.099968Z",
+     "iopub.status.idle": "2024-04-29T04:53:51.285940Z",
+     "shell.execute_reply": "2024-04-29T04:53:51.285523Z"
     }
    },
    "outputs": [
@@ -143,8 +143,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "checking accuracy and correct predictions match\n",
-      "0.3507326007326007 0.3507326007326007\n"
+      "X_test_scaled shape\n",
+      "(1092, 1)\n",
+      "y_test shape\n",
+      "(1092,)\n",
+      "accuracy: 0.3507326007326007\n",
+      "share of correct predictions: 0.3507326007326007\n",
+      "assertion that they match:\n"
      ]
     }
    ],
