--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T00:39:52.426682Z",
-     "iopub.status.busy": "2024-04-29T00:39:52.426396Z",
-     "iopub.status.idle": "2024-04-29T00:39:54.089578Z",
-     "shell.execute_reply": "2024-04-29T00:39:54.088970Z"
+     "iopub.execute_input": "2024-04-29T05:32:26.642565Z",
+     "iopub.status.busy": "2024-04-29T05:32:26.642425Z",
+     "iopub.status.idle": "2024-04-29T05:32:28.427295Z",
+     "shell.execute_reply": "2024-04-29T05:32:28.426868Z"
     }
    },
    "outputs": [],
@@ -44,10 +44,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T00:39:54.092104Z",
-     "iopub.status.busy": "2024-04-29T00:39:54.091902Z",
-     "iopub.status.idle": "2024-04-29T00:39:55.597910Z",
-     "shell.execute_reply": "2024-04-29T00:39:55.597153Z"
+     "iopub.execute_input": "2024-04-29T05:32:28.429720Z",
+     "iopub.status.busy": "2024-04-29T05:32:28.429458Z",
+     "iopub.status.idle": "2024-04-29T05:32:29.684912Z",
+     "shell.execute_reply": "2024-04-29T05:32:29.684022Z"
     }
    },
    "outputs": [],
@@ -61,10 +61,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T00:39:55.601979Z",
-     "iopub.status.busy": "2024-04-29T00:39:55.601350Z",
-     "iopub.status.idle": "2024-04-29T00:39:55.867469Z",
-     "shell.execute_reply": "2024-04-29T00:39:55.867001Z"
+     "iopub.execute_input": "2024-04-29T05:32:29.689050Z",
+     "iopub.status.busy": "2024-04-29T05:32:29.688687Z",
+     "iopub.status.idle": "2024-04-29T05:32:29.946785Z",
+     "shell.execute_reply": "2024-04-29T05:32:29.946409Z"
     }
    },
    "outputs": [],
@@ -78,10 +78,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T00:39:55.870423Z",
-     "iopub.status.busy": "2024-04-29T00:39:55.870284Z",
-     "iopub.status.idle": "2024-04-29T00:39:55.904053Z",
-     "shell.execute_reply": "2024-04-29T00:39:55.903585Z"
+     "iopub.execute_input": "2024-04-29T05:32:29.948626Z",
+     "iopub.status.busy": "2024-04-29T05:32:29.948490Z",
+     "iopub.status.idle": "2024-04-29T05:32:29.985356Z",
+     "shell.execute_reply": "2024-04-29T05:32:29.984932Z"
     }
    },
    "outputs": [
@@ -146,7 +146,7 @@
       " 'num__epsdiluted' 'num__weightedAverageShsOut'\n",
       " 'num__weightedAverageShsOutDil' 'num__marketCap' 'num__num_transparency'\n",
       " 'num__gf_score' 'num__word_count' 'num__pos_score' 'num__TONE1'\n",
-      " 'num__num_q_by_len' 'num__pos_score_finbert' 'cat__reportedCurrency_USD'\n",
+      " 'num__num_q_by_len' 'num__pos_score_finbert'\n",
       " 'cat__Sector_Communication Services' 'cat__Sector_Consumer Discretionary'\n",
       " 'cat__Sector_Consumer Staples' 'cat__Sector_Energy'\n",
       " 'cat__Sector_Financials' 'cat__Sector_Health Care'\n",
@@ -172,10 +172,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T00:39:55.951703Z",
-     "iopub.status.busy": "2024-04-29T00:39:55.951487Z",
-     "iopub.status.idle": "2024-04-29T00:39:55.960641Z",
-     "shell.execute_reply": "2024-04-29T00:39:55.960259Z"
+     "iopub.execute_input": "2024-04-29T05:32:30.023103Z",
+     "iopub.status.busy": "2024-04-29T05:32:30.022886Z",
+     "iopub.status.idle": "2024-04-29T05:32:30.031843Z",
+     "shell.execute_reply": "2024-04-29T05:32:30.031488Z"
     }
    },
    "outputs": [
@@ -586,16 +586,13 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=0.01, l1_ratio=0.5, max_iter=1000,\n",
-       "                   multi_class=&#x27;multinomial&#x27;, penalty=&#x27;elasticnet&#x27;,\n",
-       "                   solver=&#x27;saga&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(C=0.01, l1_ratio=0.5, max_iter=1000,\n",
-       "                   multi_class=&#x27;multinomial&#x27;, penalty=&#x27;elasticnet&#x27;,\n",
-       "                   solver=&#x27;saga&#x27;)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=1, l1_ratio=0.0, max_iter=1000, multi_class=&#x27;multinomial&#x27;,\n",
+       "                   penalty=&#x27;elasticnet&#x27;, solver=&#x27;saga&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(C=1, l1_ratio=0.0, max_iter=1000, multi_class=&#x27;multinomial&#x27;,\n",
+       "                   penalty=&#x27;elasticnet&#x27;, solver=&#x27;saga&#x27;)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LogisticRegression(C=0.01, l1_ratio=0.5, max_iter=1000,\n",
-       "                   multi_class='multinomial', penalty='elasticnet',\n",
-       "                   solver='saga')"
+       "LogisticRegression(C=1, l1_ratio=0.0, max_iter=1000, multi_class='multinomial',\n",
+       "                   penalty='elasticnet', solver='saga')"
       ]
      },
      "execution_count": 5,
@@ -621,10 +618,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T00:39:55.962762Z",
-     "iopub.status.busy": "2024-04-29T00:39:55.962638Z",
-     "iopub.status.idle": "2024-04-29T00:40:05.936343Z",
-     "shell.execute_reply": "2024-04-29T00:40:05.935932Z"
+     "iopub.execute_input": "2024-04-29T05:32:30.033474Z",
+     "iopub.status.busy": "2024-04-29T05:32:30.033343Z",
+     "iopub.status.idle": "2024-04-29T05:32:40.065342Z",
+     "shell.execute_reply": "2024-04-29T05:32:40.064789Z"
     }
    },
    "outputs": [
@@ -658,32 +655,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>num__EBIT</td>\n",
-       "      <td>-0.003483</td>\n",
-       "      <td>0.001771</td>\n",
+       "      <td>0.008237</td>\n",
+       "      <td>0.005705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>num__common_plus_preferred_stock</td>\n",
-       "      <td>0.001954</td>\n",
-       "      <td>0.001573</td>\n",
+       "      <td>-0.002656</td>\n",
+       "      <td>0.002135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>num__workingCapital</td>\n",
-       "      <td>-0.001793</td>\n",
-       "      <td>0.001703</td>\n",
+       "      <td>0.004908</td>\n",
+       "      <td>0.005195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>num__Ratio_A</td>\n",
-       "      <td>-0.002814</td>\n",
-       "      <td>0.004098</td>\n",
+       "      <td>0.000365</td>\n",
+       "      <td>0.004883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>num__Ratio_B</td>\n",
-       "      <td>0.000112</td>\n",
-       "      <td>0.001504</td>\n",
+       "      <td>0.001198</td>\n",
+       "      <td>0.004717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -692,55 +689,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133</th>\n",
+       "      <th>132</th>\n",
        "      <td>cat__Sector_Industrials</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.005614</td>\n",
+       "      <td>0.003702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>cat__Sector_Information Technology</td>\n",
+       "      <td>0.005713</td>\n",
+       "      <td>0.003692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
-       "      <td>cat__Sector_Information Technology</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>cat__Sector_Materials</td>\n",
+       "      <td>0.004456</td>\n",
+       "      <td>0.003668</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>135</th>\n",
-       "      <td>cat__Sector_Materials</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>cat__Sector_Real Estate</td>\n",
+       "      <td>0.003783</td>\n",
+       "      <td>0.001997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
-       "      <td>cat__Sector_Real Estate</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
        "      <td>cat__Sector_Utilities</td>\n",
-       "      <td>0.001642</td>\n",
-       "      <td>0.002493</td>\n",
+       "      <td>0.043208</td>\n",
+       "      <td>0.005661</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>138 rows × 3 columns</p>\n",
+       "<p>137 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                feature      mean       std\n",
-       "0                             num__EBIT -0.003483  0.001771\n",
-       "1      num__common_plus_preferred_stock  0.001954  0.001573\n",
-       "2                   num__workingCapital -0.001793  0.001703\n",
-       "3                          num__Ratio_A -0.002814  0.004098\n",
-       "4                          num__Ratio_B  0.000112  0.001504\n",
+       "0                             num__EBIT  0.008237  0.005705\n",
+       "1      num__common_plus_preferred_stock -0.002656  0.002135\n",
+       "2                   num__workingCapital  0.004908  0.005195\n",
+       "3                          num__Ratio_A  0.000365  0.004883\n",
+       "4                          num__Ratio_B  0.001198  0.004717\n",
        "..                                  ...       ...       ...\n",
-       "133             cat__Sector_Industrials  0.000000  0.000000\n",
-       "134  cat__Sector_Information Technology  0.000000  0.000000\n",
-       "135               cat__Sector_Materials  0.000000  0.000000\n",
-       "136             cat__Sector_Real Estate  0.000000  0.000000\n",
-       "137               cat__Sector_Utilities  0.001642  0.002493\n",
+       "132             cat__Sector_Industrials  0.005614  0.003702\n",
+       "133  cat__Sector_Information Technology  0.005713  0.003692\n",
+       "134               cat__Sector_Materials  0.004456  0.003668\n",
+       "135             cat__Sector_Real Estate  0.003783  0.001997\n",
+       "136               cat__Sector_Utilities  0.043208  0.005661\n",
        "\n",
-       "[138 rows x 3 columns]"
+       "[137 rows x 3 columns]"
       ]
      },
      "execution_count": 6,
