--- a/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Firm_Nodes_Edges_Company_Mentions.ipynb
+++ b/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Firm_Nodes_Edges_Company_Mentions.ipynb
@@ -1186,22 +1186,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15860\\2287246693.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19348\\2287246693.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols.rename(columns={'company1': 'Source', 'company2': 'Target', 'count': 'weight'}, inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15860\\2287246693.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19348\\2287246693.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['Source'].fillna(nw_cols['ticker1'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15860\\2287246693.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19348\\2287246693.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['Target'].fillna(nw_cols['ticker2'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15860\\2287246693.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19348\\2287246693.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1250,7 +1250,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"600px\"\n",
-       "            src=\"Firm_Company_Mentions_Network.html\"\n",
+       "            src=\"../../../Output/Company Mentions Network/Firm_Company_Mentions_Network.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -1258,7 +1258,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1bcc9cd8710>"
+       "<IPython.lib.display.IFrame at 0x222acf70a10>"
       ]
      },
      "execution_count": 10,
@@ -1275,7 +1275,7 @@
     "pvn.show_buttons(filter_=['physics'])\n",
     "# use repulsion\n",
     "pvn.repulsion(node_distance=100)\n",
-    "pvn.show('Firm_Company_Mentions_Network.html')"
+    "pvn.show('../../../Output/Company Mentions Network/Firm_Company_Mentions_Network.html')"
    ]
   }
  ],
