add code with train accuracy

--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_1.ipynb
@@ -108,17 +108,18 @@
      "output_type": "stream",
      "text": [
       "Tuned hyperparameters: {'C': 0.1, 'class_weight': None, 'l1_ratio': 0.25, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Train accuracy of best model:  0.36138276097339095\n",
       "Best mean CV accuracy: 0.3638938876822836\n",
-      "Coefficients: [[ 0.91689704]\n",
-      " [ 1.06152279]\n",
-      " [ 0.64610681]\n",
-      " [ 0.55745924]\n",
+      "Coefficients: [[ 0.91692996]\n",
+      " [ 1.06147299]\n",
+      " [ 0.64615861]\n",
+      " [ 0.55746748]\n",
       " [ 0.        ]\n",
-      " [-1.00163444]\n",
-      " [-1.15701576]\n",
+      " [-1.0016601 ]\n",
+      " [-1.1570297 ]\n",
       " [ 0.        ]\n",
-      " [-0.5160232 ]\n",
-      " [-0.07787494]]\n"
+      " [-0.51603245]\n",
+      " [-0.07774177]]\n"
      ]
     }
    ],
@@ -147,8 +148,8 @@
       "(1092, 1)\n",
       "y_test shape\n",
       "(1092,)\n",
-      "accuracy: 0.3507326007326007\n",
-      "share of correct predictions: 0.3507326007326007\n",
+      "accuracy: 0.3498168498168498\n",
+      "share of correct predictions: 0.3498168498168498\n",
       "assertion that they match:\n"
      ]
     }
