--- a/Code/NLP Feature Construction/Main NLP Features/extract_small_nlp_finbert_only_file.ipynb
+++ b/Code/NLP Feature Construction/Main NLP Features/extract_small_nlp_finbert_only_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "[6654 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,436 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>transcript</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Sector</th>\n",
+       "      <th>pos_score_finbert</th>\n",
+       "      <th>num_transparency</th>\n",
+       "      <th>gf_score</th>\n",
+       "      <th>word_count</th>\n",
+       "      <th>num_questions</th>\n",
+       "      <th>Positiv</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Ovrst</th>\n",
+       "      <th>Undrst</th>\n",
+       "      <th>PN</th>\n",
+       "      <th>SW</th>\n",
+       "      <th>AP</th>\n",
+       "      <th>OU</th>\n",
+       "      <th>tone</th>\n",
+       "      <th>num_q_by_len</th>\n",
+       "      <th>len_by_q_count</th>\n",
+       "      <th>fixed_quarter_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CENX</td>\n",
+       "      <td>Operator: Ladies and gentlemen, thank you for ...</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>Materials</td>\n",
+       "      <td>0.326735</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>11.057234</td>\n",
+       "      <td>7426.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>278.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>313.0</td>\n",
+       "      <td>163.0</td>\n",
+       "      <td>2.504505</td>\n",
+       "      <td>5.372340</td>\n",
+       "      <td>2.778947</td>\n",
+       "      <td>1.920245</td>\n",
+       "      <td>-1.096219</td>\n",
+       "      <td>0.002559</td>\n",
+       "      <td>390.842105</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CENX</td>\n",
+       "      <td>Operator: Ladies and gentlemen, thank you for ...</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>Materials</td>\n",
+       "      <td>0.395129</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>11.795560</td>\n",
+       "      <td>6035.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>299.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>2.616279</td>\n",
+       "      <td>6.731343</td>\n",
+       "      <td>2.759740</td>\n",
+       "      <td>2.392000</td>\n",
+       "      <td>-0.280967</td>\n",
+       "      <td>0.001657</td>\n",
+       "      <td>603.500000</td>\n",
+       "      <td>2016-10-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CHDN</td>\n",
+       "      <td>Operator: Good day, ladies and gentlemen. And ...</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>0.515874</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>13.912787</td>\n",
+       "      <td>5535.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>231.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>271.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>3.609375</td>\n",
+       "      <td>7.885246</td>\n",
+       "      <td>2.196532</td>\n",
+       "      <td>2.239669</td>\n",
+       "      <td>0.119644</td>\n",
+       "      <td>0.001445</td>\n",
+       "      <td>691.875000</td>\n",
+       "      <td>2015-04-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CHDN</td>\n",
+       "      <td>Operator: Good day, ladies and gentlemen and w...</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>0.430664</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>17.300669</td>\n",
+       "      <td>5453.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>4.070175</td>\n",
+       "      <td>10.541667</td>\n",
+       "      <td>2.951049</td>\n",
+       "      <td>2.140351</td>\n",
+       "      <td>0.959579</td>\n",
+       "      <td>0.001467</td>\n",
+       "      <td>681.625000</td>\n",
+       "      <td>2015-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CHDN</td>\n",
+       "      <td>Operator: Good day, ladies and gentlemen, and ...</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>0.624336</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>12.834639</td>\n",
+       "      <td>5464.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>224.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>212.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>4.307692</td>\n",
+       "      <td>8.466667</td>\n",
+       "      <td>2.686275</td>\n",
+       "      <td>1.696000</td>\n",
+       "      <td>0.102382</td>\n",
+       "      <td>0.002196</td>\n",
+       "      <td>455.333333</td>\n",
+       "      <td>2015-10-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6649</th>\n",
+       "      <td>BW</td>\n",
+       "      <td>Operator: Good morning. My name is Keith and I...</td>\n",
+       "      <td>BBB</td>\n",
+       "      <td>Industrials</td>\n",
+       "      <td>0.301030</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>12.995092</td>\n",
+       "      <td>7631.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>327.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>3.522727</td>\n",
+       "      <td>4.974359</td>\n",
+       "      <td>2.347826</td>\n",
+       "      <td>1.557143</td>\n",
+       "      <td>-1.365582</td>\n",
+       "      <td>0.004849</td>\n",
+       "      <td>206.243243</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6650</th>\n",
+       "      <td>BWA</td>\n",
+       "      <td>Operator: Good morning. My name is Rebecca, an...</td>\n",
+       "      <td>BBB</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>0.552842</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>12.232941</td>\n",
+       "      <td>10669.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>311.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>447.0</td>\n",
+       "      <td>233.0</td>\n",
+       "      <td>2.508065</td>\n",
+       "      <td>9.256098</td>\n",
+       "      <td>3.015748</td>\n",
+       "      <td>1.918455</td>\n",
+       "      <td>-0.290637</td>\n",
+       "      <td>0.003468</td>\n",
+       "      <td>288.351351</td>\n",
+       "      <td>2011-10-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6651</th>\n",
+       "      <td>BWA</td>\n",
+       "      <td>Operator: Good morning. My name is Melissa, an...</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>0.118580</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>9.472823</td>\n",
+       "      <td>10093.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>348.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>505.0</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>3.741935</td>\n",
+       "      <td>5.542857</td>\n",
+       "      <td>2.583333</td>\n",
+       "      <td>2.086777</td>\n",
+       "      <td>-0.607383</td>\n",
+       "      <td>0.005647</td>\n",
+       "      <td>177.070175</td>\n",
+       "      <td>2015-10-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6652</th>\n",
+       "      <td>BYD</td>\n",
+       "      <td>Operator: Welcome to the Boyd Gaming first qua...</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>1.082187</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>13.309999</td>\n",
+       "      <td>7655.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>338.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>345.0</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>7.041667</td>\n",
+       "      <td>13.053571</td>\n",
+       "      <td>2.254464</td>\n",
+       "      <td>2.315436</td>\n",
+       "      <td>1.895212</td>\n",
+       "      <td>0.002482</td>\n",
+       "      <td>402.894737</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6653</th>\n",
+       "      <td>BZH</td>\n",
+       "      <td>Operator: Good morning, and welcome to the Bea...</td>\n",
+       "      <td>CCC</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>0.318063</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>13.729922</td>\n",
+       "      <td>10077.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>499.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>238.0</td>\n",
+       "      <td>3.304636</td>\n",
+       "      <td>6.991597</td>\n",
+       "      <td>3.548544</td>\n",
+       "      <td>1.680672</td>\n",
+       "      <td>-0.436183</td>\n",
+       "      <td>0.005458</td>\n",
+       "      <td>183.218182</td>\n",
+       "      <td>2012-10-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6654 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ticker                                         transcript Rating  \\\n",
+       "0      CENX  Operator: Ladies and gentlemen, thank you for ...     BB   \n",
+       "1      CENX  Operator: Ladies and gentlemen, thank you for ...     BB   \n",
+       "2      CHDN  Operator: Good day, ladies and gentlemen. And ...     BB   \n",
+       "3      CHDN  Operator: Good day, ladies and gentlemen and w...     BB   \n",
+       "4      CHDN  Operator: Good day, ladies and gentlemen, and ...     BB   \n",
+       "...     ...                                                ...    ...   \n",
+       "6649     BW  Operator: Good morning. My name is Keith and I...    BBB   \n",
+       "6650    BWA  Operator: Good morning. My name is Rebecca, an...    BBB   \n",
+       "6651    BWA  Operator: Good morning. My name is Melissa, an...      A   \n",
+       "6652    BYD  Operator: Welcome to the Boyd Gaming first qua...      B   \n",
+       "6653    BZH  Operator: Good morning, and welcome to the Bea...    CCC   \n",
+       "\n",
+       "                      Sector  pos_score_finbert  num_transparency   gf_score  \\\n",
+       "0                  Materials           0.326735              0.08  11.057234   \n",
+       "1                  Materials           0.395129              0.06  11.795560   \n",
+       "2     Consumer Discretionary           0.515874              0.09  13.912787   \n",
+       "3     Consumer Discretionary           0.430664              0.06  17.300669   \n",
+       "4     Consumer Discretionary           0.624336              0.06  12.834639   \n",
+       "...                      ...                ...               ...        ...   \n",
+       "6649             Industrials           0.301030              0.09  12.995092   \n",
+       "6650  Consumer Discretionary           0.552842              0.19  12.232941   \n",
+       "6651  Consumer Discretionary           0.118580              0.16   9.472823   \n",
+       "6652  Consumer Discretionary           1.082187              0.07  13.309999   \n",
+       "6653  Consumer Discretionary           0.318063              0.13  13.729922   \n",
+       "\n",
+       "      word_count  num_questions  Positiv  ...  Ovrst  Undrst        PN  \\\n",
+       "0         7426.0           19.0    278.0  ...  313.0   163.0  2.504505   \n",
+       "1         6035.0           10.0    225.0  ...  299.0   125.0  2.616279   \n",
+       "2         5535.0            8.0    231.0  ...  271.0   121.0  3.609375   \n",
+       "3         5453.0            8.0    232.0  ...  244.0   114.0  4.070175   \n",
+       "4         5464.0           12.0    224.0  ...  212.0   125.0  4.307692   \n",
+       "...          ...            ...      ...  ...    ...     ...       ...   \n",
+       "6649      7631.0           37.0    310.0  ...  327.0   210.0  3.522727   \n",
+       "6650     10669.0           37.0    311.0  ...  447.0   233.0  2.508065   \n",
+       "6651     10093.0           57.0    348.0  ...  505.0   242.0  3.741935   \n",
+       "6652      7655.0           19.0    338.0  ...  345.0   149.0  7.041667   \n",
+       "6653     10077.0           55.0    499.0  ...  400.0   238.0  3.304636   \n",
+       "\n",
+       "             SW        AP        OU      tone  num_q_by_len  len_by_q_count  \\\n",
+       "0      5.372340  2.778947  1.920245 -1.096219      0.002559      390.842105   \n",
+       "1      6.731343  2.759740  2.392000 -0.280967      0.001657      603.500000   \n",
+       "2      7.885246  2.196532  2.239669  0.119644      0.001445      691.875000   \n",
+       "3     10.541667  2.951049  2.140351  0.959579      0.001467      681.625000   \n",
+       "4      8.466667  2.686275  1.696000  0.102382      0.002196      455.333333   \n",
+       "...         ...       ...       ...       ...           ...             ...   \n",
+       "6649   4.974359  2.347826  1.557143 -1.365582      0.004849      206.243243   \n",
+       "6650   9.256098  3.015748  1.918455 -0.290637      0.003468      288.351351   \n",
+       "6651   5.542857  2.583333  2.086777 -0.607383      0.005647      177.070175   \n",
+       "6652  13.053571  2.254464  2.315436  1.895212      0.002482      402.894737   \n",
+       "6653   6.991597  3.548544  1.680672 -0.436183      0.005458      183.218182   \n",
+       "\n",
+       "      fixed_quarter_date  \n",
+       "0             2016-07-01  \n",
+       "1             2016-10-01  \n",
+       "2             2015-04-01  \n",
+       "3             2015-07-01  \n",
+       "4             2015-10-01  \n",
+       "...                  ...  \n",
+       "6649          2016-07-01  \n",
+       "6650          2011-10-01  \n",
+       "6651          2015-10-01  \n",
+       "6652          2016-07-01  \n",
+       "6653          2012-10-01  \n",
+       "\n",
+       "[6654 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# merge on fixed_quarter_date\n",
+    "\n",
+    "# list of files in '../../../Data/All_Data/All_Data_Fixed_Quarter_Dates'\n",
+    "import os\n",
+    "file_list = [f for f in os.listdir(r'../../../Data/All_Data/All_Data_Fixed_Quarter_Dates') if f.endswith('.parquet')]\n",
+    "# read in all parquet files\n",
+    "all_data_fqd_df = pd.concat([pd.read_parquet(r'../../../Data/All_Data/All_Data_Fixed_Quarter_Dates/' + f, columns = ['ticker', 'fixed_quarter_date', 'transcript']) for f in file_list])\n",
+    "\n",
+    "df = df.merge(all_data_fqd_df, on = ['ticker', 'transcript'], how = 'left')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['ticker', 'transcript', 'Rating', 'Sector', 'pos_score_finbert',\n",
+      "       'num_transparency', 'gf_score', 'word_count', 'num_questions',\n",
+      "       'Positiv', 'Negativ', 'Strong', 'Weak', 'Active', 'Passive', 'Ovrst',\n",
+      "       'Undrst', 'PN', 'SW', 'AP', 'OU', 'tone', 'num_q_by_len',\n",
+      "       'len_by_q_count', 'fixed_quarter_date'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check columns\n",
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
