finalize logit functions and experiment with smote and balanced class - no effect for simplest model

--- a/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_smote_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_smote_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T04:49:05.132871Z",
@@ -29,12 +29,12 @@
     "from Logistic_Regression_Functions import *\n",
     "\n",
     "# Model name\n",
-    "model_name = 'rating_change_model_1'"
+    "model_name = 'smote_rating_change_model_1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T04:49:07.131948Z",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T04:49:09.891553Z",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T04:49:10.274140Z",
@@ -94,7 +94,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{-1: 96, 0: 4166, 1: 135}\n",
+      "{-1: 1000, 0: 4166, 1: 1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "unique, count = np.unique(y_train, return_counts=True)\n",
+    "dict_value_count = {k:v for (k, v) in zip(unique, count)}\n",
+    "print(dict_value_count)\n",
+    "sm = SMOTE(sampling_strategy={-1:1000, 1: 1000})\n",
+    "X_train_sm, y_train_sm = sm.fit_resample(X_train_scaled, y_train)\n",
+    "unique, count = np.unique(y_train_sm, return_counts=True)\n",
+    "dict_value_count = {k:v for (k, v) in zip(unique, count)}\n",
+    "print(dict_value_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35295778624876467"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4166/(10000+4166)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T04:49:10.342853Z",
@@ -108,24 +154,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned hyperparameters: {'C': 0.001, 'class_weight': 'balanced', 'l1_ratio': 0.5, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
-      "Train accuracy of best model:  0.030702751876279282\n",
-      "Best mean CV accuracy: 0.7640741028027718\n",
-      "Coefficients: [[0. 0.]\n",
-      " [0. 0.]\n",
-      " [0. 0.]]\n",
+      "Tuned hyperparameters: {'C': 0.001, 'class_weight': None, 'l1_ratio': 0.0, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Train accuracy of best model:  0.6756406097956535\n",
+      "Best mean CV accuracy: 0.6756405756867137\n",
+      "Coefficients: [[-0.00077917  0.00014474]\n",
+      " [-0.03863574 -0.06811877]\n",
+      " [ 0.05094895  0.08603081]]\n",
       "Corresponding class: [-1  0  1]\n"
      ]
     }
    ],
    "source": [
     "# Train model\n",
-    "best_model = train_model_with_grid_search(X_train_scaled, y_train, model_name)"
+    "best_model = train_model_with_grid_search(X_train_sm, y_train_sm, model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T05:01:57.538607Z",
@@ -143,8 +189,8 @@
       "(1092, 2)\n",
       "y_test shape\n",
       "(1092,)\n",
-      "accuracy: 0.028388278388278388\n",
-      "share of correct predictions: 0.028388278388278388\n",
+      "accuracy: 0.9496336996336996\n",
+      "share of correct predictions: 0.9496336996336996\n",
       "assertion that they match:\n"
      ]
     }
